re PR java/30607 (gcj -I x -C doesn't include x as source dir search patch)

PR java/30607:
	* jvspec.c (lang_specific_driver): Handle separate -I argument.
	* lang.opt (-I): Add 'Separate'.

From-SVN: r121311